--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -27,7 +27,7 @@ jobs:
       if: contains( matrix.os, 'ubuntu')
       run: |
         python -m pip install --upgrade pip
-        pip install numpy hatch spiceypy json5
+        pip install numpy hatch spiceypy json5 pytest
 
     - name: Compile
       run: hatch build
@@ -38,5 +38,5 @@ jobs:
         ls -la ./dist
         python -m pip install dist/*.whl
         cd ./tests
-        python ./test.py
+        pytest ./test.py
 
