--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,7 +27,7 @@ jobs:
       if: contains( matrix.os, 'ubuntu')
       run: |
         python -m pip install --upgrade pip
-        pip install numpy hatch spiceypy json5 pytest
+        pip install numpy hatch spiceypy json5 pytest pdoc
 
     - name: Compile
       run: hatch build
@@ -40,3 +40,13 @@ jobs:
         cd ./tests
         pytest ./test.py
 
+    - name: Build documentation
+      run: doc ./src/jsonspice --docformat google --output-dir ./doc --logo "https://raw.githubusercontent.com/jacobwilliams/jsonspice/master/media/jsonspice.png"
+
+    - name: Deploy Documentation
+      if: github.ref == 'refs/heads/master'
+      uses: JamesIves/github-pages-deploy-action@v4.7.3
+      with:
+        branch: gh-pages # The branch the action should deploy to.
+        folder: doc  # The folder the action should deploy.
+        single-commit: true
