--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
 [project.urls]
 Homepage = "https://github.com/jacobwilliams/jsonspice"
 Issues = "https://github.com/jacobwilliams/jsonspice/issues"
+documentation = "https://jacobwilliams.github.io/jsonspice"
 
 [tool.pixi.project]
 channels = ["conda-forge"]
@@ -25,4 +26,6 @@ platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
 [tool.pixi.dependencies]
 pip = "*"
+conda-build = ">=25.4.2,<26"
+pdoc = ">=14.4.0,<15"
 
